--- a/modules/1-0-header/index.html
+++ b/modules/1-0-header/index.html
@@ -12,6 +12,24 @@
 </head>
 <body>
     <header>
+        <header>
+            <div class="head-wrapper">
+                <h1><a href="#index">PetStory online<img src="assets/img/logo_bamboo.svg" alt="logo decoration bamboo"></a></h1>
+                <ul>
+                    <li><span>About</span></li>
+                    <li><a href="">Map</a></li>
+                    <li><a href="">Zoos</a></li>
+                    <li><a href="../donate/index.html">Donate</a></li>
+                    <li><a href="">Contact us</a></li>
+                </ul>
+                <p class="designed"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by &copy;</a></p>
+                <div class="burger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </header>
 
     </header>
 </body>
